# tccon-caltechdata

./: .gitignore  README.md  codemeta.json  create_big_record.py  create_new_version.py  create_readme_contents_tccon-data  create_site.py  example_monthly_update.sh  license-end.txt  license-start.txt  mint_doi.py  pyproject.toml  tccon_metadata.py  update_all.py  update_big_record.py  update_license.py  update_site.py  upload_files.py
